--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-test-sources/test-annotations"/>
         <property name="java-output-path" value="/Labo3Capas/build/classes"/>
-        <property name="context-root" value="TareaJSTL"/>
+        <property name="context-root" value="TareaValid"/>
     </wb-module>
 </project-modules>
